--- a/src/style/components/NoteList.css
+++ b/src/style/components/NoteList.css
@@ -53,7 +53,7 @@
 
 .edit-btn-list {
   background: transparent;
-  color: #667eea;
+  color: #000000;
   border: none;
   width: 24px;
   height: 24px;
@@ -72,7 +72,7 @@
 }
 
 .edit-btn-list:hover {
-  color: #764ba2;
+  color: #000000;
 }
 
 .delete-btn {
