--- a/src/style/components/SearchBar.css
+++ b/src/style/components/SearchBar.css
@@ -27,7 +27,7 @@
 .clear-search {
   position: absolute;
   right: 10px;
-  background: #ff4757;
+  background: #000000;
   color: white;
   border: none;
   width: 24px;
