--- a/src/style/components/Notebook.css
+++ b/src/style/components/Notebook.css
@@ -37,6 +37,7 @@
 	font-size: 24px;
 	font-weight: 700;
 	color: #1e293b;
+	margin-top: 5px;
 	margin-bottom: 20px;
 	display: flex;
 	align-items: center;
@@ -166,14 +167,41 @@
 }
 
 .burger-btn {
-	background: transparent;
+	width: 30px;
+	height: 24px;
+	position: relative;
+	background: none;
 	border: none;
-	font-size: 24px;
 	cursor: pointer;
-	padding: 10px;
-	position: static;
-	padding-left: 93%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 0;
+	top: 10px;
+	left: 90%;
 	z-index: 20;
+}
+
+.burger-btn span {
+	display: block;
+	width: 100%;
+	height: 3px;
+	background-color: #333;
+	border-radius: 3px;
+	transition: all 0.3s ease;
+}
+
+/* Анимация в крестик */
+.burger-btn.active span:nth-child(1) {
+	transform: translateY(10.5px) rotate(45deg);
+}
+
+.burger-btn.active span:nth-child(2) {
+	opacity: 0;
+}
+
+.burger-btn.active span:nth-child(3) {
+	transform: translateY(-10.5px) rotate(-45deg);
 }
 
 @media (max-width: 768px) {
@@ -191,7 +219,7 @@
 		width: 100%;
 		height: 100%;
 		z-index: 10;
-		background: rgba(0, 0, 0, 0.5);
+		background: #252525;
 	}
 	.notebook-sidebar.visible {
 		display: flex;
